<resources>
    <string name="hi">Добро пожаловать</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="account">Войти!</string>
    <string name="CheckBox">Вы хотите сохранить данные?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="balance">баланс</string>
    <string name="map">добавить карту</string>
    <string name="put">положить деньги</string>
    <string name="takeoff"> снять деньги</string>
    <string name="uz">ваше имя</string>
    <string name="search">поиск</string>
    <string name="kitchen_appliances">куханные приборы</string>
    <string name="shoes">обувь</string>
    <string name="outerwear">верхняя одежда</string>
    <string name="undergarments">нижная одежда</string>
    <string name="technic">быт. техника</string>
    <string name="furniture">мебель</string>
    <string name="toys"> дет.игрушки</string>

</resources>